[gd_scene load_steps=11 format=2]

[ext_resource path="res://core/enemies/stalker/stalker.png" type="Texture" id=1]
[ext_resource path="res://particles/SmokeTrail/SmokeTrail.tscn" type="PackedScene" id=2]
[ext_resource path="res://effects/InvertColors/invert_colors_material.tres" type="Material" id=3]
[ext_resource path="res://core/enemies/stalker/Stalker.gd" type="Script" id=4]
[ext_resource path="res://particles/SmokeTrail/smoke_one.png" type="Texture" id=5]
[ext_resource path="res://sfx/stalker_groan.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 9.0

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.125, 0.875 ) ]
}

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.235227 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=4]
radius = 200.0

[node name="Stalker" type="Area2D"]
position = Vector2( 772, 362 )
collision_layer = 64
collision_mask = 3
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "following"
anims/following = SubResource( 2 )

[node name="ParticleAnchor" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="SmokeTrail" parent="ParticleAnchor" instance=ExtResource( 2 )]
material = ExtResource( 3 )
position = Vector2( 9, 0 )
amount = 15
local_coords = false
direction = Vector2( 1, 0 )

[node name="SmallTrail" type="CPUParticles2D" parent="ParticleAnchor"]
material = ExtResource( 3 )
position = Vector2( 8, 5 )
amount = 12
local_coords = false
texture = ExtResource( 5 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
scale_amount = 0.5
scale_amount_curve = SubResource( 3 )

[node name="SmallTrail2" type="CPUParticles2D" parent="ParticleAnchor"]
material = ExtResource( 3 )
position = Vector2( 8, -5 )
amount = 12
local_coords = false
texture = ExtResource( 5 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
scale_amount = 0.5
scale_amount_curve = SubResource( 3 )

[node name="FollowTrigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowTrigger"]
visible = false
shape = SubResource( 4 )

[node name="GroanSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
bus = "SFX"
[connection signal="area_entered" from="." to="." method="_on_Stalker_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Stalker_body_entered"]
[connection signal="area_entered" from="FollowTrigger" to="." method="_on_FollowTrigger_area_entered"]
[connection signal="area_exited" from="FollowTrigger" to="." method="_on_FollowTrigger_area_exited"]
[connection signal="body_entered" from="FollowTrigger" to="." method="_on_FollowTrigger_body_entered"]
[connection signal="body_exited" from="FollowTrigger" to="." method="_on_FollowTrigger_body_exited"]
